OpenSLP Change Log
------------------
Please make entries to this log (in addition to the CVS log) that describe 
major changes to the OpenSLP code base.  An entries should be separated by
blank lines and include the date, developer's email, and change description.
=============================================================================

03/05/01 mpeterson@caldera.com
Fixed problem where multicast was not being use when a DA can not be found
that support all scopes of a given request.

03/02/01 mpeterson@caldera.com
Added --enable-async-api configure option

03/02/01 mpeterson@caldera.com
Added slptool to openslp CVS module and included Ganesan's register and
deregister enhancements

03/01/01 mpeterson@caldera.com
Changed SLPParseAttr() to be compliant with what will be in RFC2614bis this
required an interface change I bumped the library rev to 0:3:0

03/01/01 mpeterson@caldera.com
Patched up the MSVC build and tested slpd to make sure it works

03/01/01 mpeterson@caldera.com
Patched up the MSVC build and tested libslp.dll to make sure it works

*** Tag OpenSLP 0.8.2 ***

02/14/01 rganesan@myrealbox.com
Modified top-level Makefile.am to install rfcs in the install directory.

02/14/01 rganesan@myrealbox.com
Fixed many doc bugs based on comments from Susan G. Kleinmann (sgk@debian.org).

02/12/01 mpeterson@caldera.com
Fixed a serious but *very* rare segfault due to uninitialized buf variables

02/09/01 mpeterson@caldera.com
Removed old MSVC project files and made new ones in the win32 directory

02/09/01 mpeterson@caldera.com
Numerous changes to make it so libsmb will build on Windows without cgywin. 
(Had to beautify source after mangling it with Windows editors, etc)

02/08/01 mpeterson@caldera.com
UA requests may only be serviced by DAs if a known DA is found that supports
ALL the scopes in the request scope list.

02/08/01 mpeterson@caldera.com
Added code to make sure that DAAdvert bootstamps are never the same in 
messages generated by slpd
